{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 42,
  "lineage": "bca25234-2285-6cb7-5ae0-c2be00962e70",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main_vpc_default_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838482819983:route-table/rtb-0bbc62b9175ac25dc",
            "default_route_table_id": "rtb-0bbc62b9175ac25dc",
            "id": "rtb-0bbc62b9175ac25dc",
            "owner_id": "838482819983",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7737110af5b9d44",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "my_default_rt"
            },
            "tags_all": {
              "name": "my_default_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-050881346cf953149"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_web_igw",
            "aws_vpc.new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "def_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838482819983:security-group/sg-04becb8d22a669585",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04becb8d22a669585",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "838482819983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "def sec grp"
            },
            "tags_all": {
              "Name": "def sec grp"
            },
            "vpc_id": "vpc-050881346cf953149"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d3b3274b6c5d4aa",
            "arn": "arn:aws:ec2:us-east-1:838482819983:instance/i-0d571baf444dddee6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d571baf444dddee6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testing_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-007f0055373a94f17",
            "private_dns": "ip-10-0-10-120.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.120",
            "public_ip": "34.203.215.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d53f218a482d1cc9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0712c84b350fea04c",
            "tags": {
              "name": "my new ec2"
            },
            "tags_all": {
              "name": "my new ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04becb8d22a669585"
            ]
          },
          "dependencies": [
            "aws_default_security_group.def_sec_grp",
            "aws_key_pair.new_key",
            "aws_subnet.web1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838482819983:internet-gateway/igw-0e7737110af5b9d44",
            "id": "igw-0e7737110af5b9d44",
            "owner_id": "838482819983",
            "tags": {
              "name": "new vpc IGW"
            },
            "tags_all": {
              "name": "new vpc IGW"
            },
            "vpc_id": "vpc-050881346cf953149"
          },
          "dependencies": [
            "aws_vpc.new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838482819983:subnet/subnet-0712c84b350fea04c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0712c84b350fea04c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "838482819983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "subnet new web"
            },
            "tags_all": {
              "name": "subnet new web"
            },
            "vpc_id": "vpc-050881346cf953149"
          },
          "dependencies": [
            "aws_vpc.new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838482819983:vpc/vpc-050881346cf953149",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07855e58a0d91a0c7",
            "default_route_table_id": "rtb-0bbc62b9175ac25dc",
            "default_security_group_id": "sg-04becb8d22a669585",
            "dhcp_options_id": "dopt-036255d40fa2cea16",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-050881346cf953149",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bbc62b9175ac25dc",
            "owner_id": "838482819983",
            "tags": {
              "name": "main new vpc"
            },
            "tags_all": {
              "name": "main new vpc"
            }
          }
        }
      ]
    }
  ]
}